# termlayout

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: dashboard.rs  directory_tree.rs  markdown_viewer.rs  newspaper.rs  table_example.rs  two_columns.rs
examples/doc/: EXAMPLE.md
examples/shared/: mod.rs
src/: core.rs  ext.rs  lib.rs  widgets.rs
src/core/: context.rs  geometry.rs  layout.rs  measurements.rs  options.rs  str.rs  style.rs  textbuilder.rs  utils.rs
src/ext/: base_layout_writer.rs  layout_with_options.rs  macros.rs
src/widgets/: cell.rs  filler.rs  frame.rs  horizontal.rs  key_value_view.rs  lines.rs  list.rs  markdown.rs  menu.rs  paragraph.rs  table.rs  tree.rs  vertical.rs
src/widgets/cell/: dimension.rs  formatted.rs  metrics.rs
src/widgets/frame/: decoration.rs  formatted.rs
src/widgets/horizontal/: row.rs
src/widgets/key_value_view/: decoration.rs
src/widgets/markdown/: buffer.rs  config.rs  handler.rs
src/widgets/table/: decoration.rs  metrics.rs
src/widgets/tree/: decoration.rs  formatted.rs
