[package]
name = "termlayout"
version = "0.1.0"
edition = "2024"
description = "A declarative layout and widget library for building structured terminal output and CLI layouts"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "layout", "ansi", "cli", "tui"]
categories = ["command-line-interface", "rendering"]
repository = "https://github.com/johampel/termlayout"


[dependencies]
ouroboros = "0.18.5"
pulldown-cmark = { version = "0.13.4", optional = true }
unicode-width = "0.2.0"

[dev-dependencies]
termsize = "0.1.9"

[features]
default = ["markdown"]
markdown = ["dep:pulldown-cmark"]

[[example]]
name = "markdown_viewer"
required-features = ["markdown"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
